--- a/Assets/SASS/main.css
+++ b/Assets/SASS/main.css
@@ -8,31 +8,6 @@ body {
   background: linear-gradient(black, rgb(130, 5, 184), Black);
 }
 
-/* Estilo menu */
-.top {
-    display: flex;
-    justify-content: space-between;
-    font-size: xx-large;
-    background-color: black;
-  }
-  
-  a {
-    text-decoration: none;
-    color: rgb(163, 92, 230);
-  }
-  
-  .menu {
-    padding-top: 25px;
-  }
-  .menu ul {
-    display: flex;
-    justify-content: end;
-    list-style-type: none;
-  }
-  .menu ul li {
-    margin-right: 2%;
-  }
-
 video {
   width: 100%;
   height: 100%;
@@ -123,12 +98,12 @@ h2 {
 
 .cable, .adaptador, .vidrio, .gamepad, .powerbank, .funda {
   text-align: center;
-  max-width: 150px;
+  max-width: 170px;
   margin: 15px;
   padding: 10px;
   grid-area: cable;
   border-radius: 10px;
-  box-shadow: 0 0 0.1em rgb(0, 0, 0);
+  box-shadow: 0 0 0.1em rgba(0, 0, 0, 0.3);
   background-color: white;
   transition: all 300ms ease;
 }
@@ -187,6 +162,35 @@ h2 {
 
 label {
   color: white;
+}
+
+/* Estilo Menu Mobile*/
+* {
+  text-decoration: none;
+  list-style: none;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  font-size: xx-large;
+  background-color: black;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(163, 92, 230);
+}
+
+.menu {
+  padding-top: 25px;
+}
+.menu ul {
+  display: flex;
+  justify-content: end;
+}
+.menu ul li {
+  margin-right: 2%;
 }
 
 footer {
