--- a/Assets/SASS/main.scss
+++ b/Assets/SASS/main.scss
@@ -1,4 +1,4 @@
-@use '_commons';
-@use '_content';
-@use '_navbar';
-@use '_footer';
+@use 'commons';
+@use 'content';
+@use 'navbar';
+@use 'footer';
