--- a/Assets/SASS/main.css
+++ b/Assets/SASS/main.css
@@ -9,7 +9,7 @@ body {
 }
 
 video {
-  width: 100%;
+  width: 100vw;
   height: 100%;
 }
 
@@ -17,8 +17,7 @@ video {
   padding: 10px;
   font-size: xx-large;
 }
-
-h2 {
+#tittle h2 {
   color: white;
   font-family: sans-serif;
 }
@@ -27,9 +26,9 @@ h2 {
 #celulares {
   justify-content: space-around;
   display: grid;
-  grid-template-columns: 20%, 20%, 20%;
-  grid-template-rows: 20%, 20%;
-  grid-template-areas: "iphone huawei motorola" "pixel samsung xiaomi";
+  grid-template-columns: 30%, 30%;
+  grid-template-rows: 10%, 10%, 10%;
+  grid-template-areas: "iphone huawei" "motorola pixel" "samsung xiaomi";
 }
 #celulares img {
   width: 150px;
@@ -38,6 +37,21 @@ h2 {
      object-fit: contain;
 }
 
+@media only screen and (min-width: 1280px) {
+  #celulares {
+    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 20%, 20%, 20%;
+    grid-template-rows: 20%, 20%;
+    grid-template-areas: "iphone huawei motorola" "pixel samsung xiaomi";
+  }
+  #celulares img {
+    width: 150px;
+    height: 150px;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+}
 .iphone, .xiaomi, .samsung, .pixel, .motorola, .huawei {
   text-align: center;
   max-width: 170px;
@@ -85,9 +99,9 @@ h2 {
 #accesorios {
   justify-content: space-around;
   display: grid;
-  grid-template-columns: 20%, 20%, 20%;
-  grid-template-rows: 20%, 20%;
-  grid-template-areas: "cable funda powerbank" "gamepad vidrio adaptador";
+  grid-template-columns: 30%, 30%;
+  grid-template-rows: 10%, 10%, 10%;
+  grid-template-areas: "cable funda" "powerbank gamepad" "vidrio adaptador";
 }
 #accesorios img {
   width: 150px;
@@ -96,6 +110,21 @@ h2 {
      object-fit: contain;
 }
 
+@media only screen and (min-width: 1280px) {
+  #accesorios {
+    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 20%, 20%, 20%;
+    grid-template-rows: 20%, 20%;
+    grid-template-areas: "cable funda powerbank" "gamepad vidrio adaptador";
+  }
+  #accesorios img {
+    width: 150px;
+    height: 150px;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+}
 .cable, .adaptador, .vidrio, .gamepad, .powerbank, .funda {
   text-align: center;
   max-width: 170px;
